// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Avatar component renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 6,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 48,
        "width": 48,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 24,
                "height": 48,
                "justifyContent": "center",
                "width": 48,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 16,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View />
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 11,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Avatar Props 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 6,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Object {
        "backgroundColor": "#FF9800",
        "borderColor": "#FFB74D",
        "borderRadius": 6,
        "borderWidth": 2,
        "height": 48,
        "width": 48,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 24,
                "height": 48,
                "justifyContent": "center",
                "width": 48,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 16,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View />
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 11,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Container Style 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FF9800",
      "borderColor": "#FFB74D",
      "borderRadius": 8,
      "borderWidth": 2,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 48,
        "width": 48,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 24,
                "height": 48,
                "justifyContent": "center",
                "width": 48,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 16,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View />
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 11,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props First Label Props 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 6,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 48,
        "width": 48,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 24,
                "height": 48,
                "justifyContent": "center",
                "width": 48,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 16,
          },
          Object {},
          Object {
            "color": "#FF9800",
            "textDecorationLine": "underline",
          },
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View />
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 11,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Icon Check Circle 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 6,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 48,
        "width": 48,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 24,
                "height": 48,
                "justifyContent": "center",
                "width": 48,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 16,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00A64D",
              "borderRadius": 10,
              "height": 20,
              "justifyContent": "center",
              "marginLeft": 8,
              "padding": 4,
              "width": 20,
            }
          }
          testID="header_avatar.icon_check"
        >
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View>
                  <View
                    onLayout={[Function]}
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "position": "relative",
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        Object {
                          "bottom": 0,
                          "left": 0,
                          "opacity": 1,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#f9f9f9",
                            "height": 12,
                            "justifyContent": "center",
                            "width": 12,
                          }
                        }
                        testID="Image__placeholder"
                      />
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "overflow": "hidden",
                          },
                          Object {
                            "height": 12,
                            "width": 12,
                          },
                        ]
                      }
                    >
                      <FastImageView
                        onFastImageError={[Function]}
                        onFastImageLoadEnd={[Function]}
                        resizeMode="cover"
                        size={12}
                        source={null}
                        style={
                          Object {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 11,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Icon First Label 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 6,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 48,
        "width": 48,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 24,
                "height": 48,
                "justifyContent": "center",
                "width": 48,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 16,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View>
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View
                testID="header_avatar.icon_first_label"
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={12}
                  bbWidth={12}
                  color={4281284933}
                  data-name="Layer 1"
                  focusable={false}
                  height={12}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {},
                      Object {
                        "flex": 0,
                        "height": 12,
                        "width": 12,
                      },
                    ]
                  }
                  tintColor={4281284933}
                  vbHeight={24}
                  vbWidth={24}
                  width={12}
                >
                  <RNSVGGroup>
                    <RNSVGPath
                      d="M19 14h2a1 1 0 000-2h-2v-1a5.15 5.15 0 00-.21-1.36A5 5 0 0022 5a1 1 0 00-2 0 3 3 0 01-2.14 2.87A5 5 0 0016 6.4a2.58 2.58 0 000-.4 4 4 0 00-8 0 2.58 2.58 0 000 .4 5 5 0 00-1.9 1.47A3 3 0 014 5a1 1 0 00-2 0 5 5 0 003.21 4.64A5.15 5.15 0 005 11v1H3a1 1 0 000 2h2v1a7 7 0 00.14 1.38A5 5 0 002 21a1 1 0 002 0 3 3 0 011.81-2.74 7 7 0 0012.38 0A3 3 0 0120 21a1 1 0 002 0 5 5 0 00-3.14-4.62A7 7 0 0019 15zm-8 5.9A5 5 0 017 15v-4a3 3 0 013-3h1zM10 6a2 2 0 014 0zm7 9a5 5 0 01-4 4.9V8h1a3 3 0 013 3z"
                      fill={
                        Array [
                          2,
                        ]
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
        </View>
      </View>
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 11,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Icon First Label Props 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 6,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 48,
        "width": 48,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 24,
                "height": 48,
                "justifyContent": "center",
                "width": 48,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 16,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View>
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View
                testID="header_avatar.icon_first_label"
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={12}
                  bbWidth={12}
                  color={4294940672}
                  data-name="Layer 1"
                  focusable={false}
                  height={12}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {},
                      Object {
                        "flex": 0,
                        "height": 12,
                        "width": 12,
                      },
                    ]
                  }
                  tintColor={4294940672}
                  vbHeight={24}
                  vbWidth={24}
                  width={12}
                >
                  <RNSVGGroup>
                    <RNSVGPath
                      d="M19 14h2a1 1 0 000-2h-2v-1a5.15 5.15 0 00-.21-1.36A5 5 0 0022 5a1 1 0 00-2 0 3 3 0 01-2.14 2.87A5 5 0 0016 6.4a2.58 2.58 0 000-.4 4 4 0 00-8 0 2.58 2.58 0 000 .4 5 5 0 00-1.9 1.47A3 3 0 014 5a1 1 0 00-2 0 5 5 0 003.21 4.64A5.15 5.15 0 005 11v1H3a1 1 0 000 2h2v1a7 7 0 00.14 1.38A5 5 0 002 21a1 1 0 002 0 3 3 0 011.81-2.74 7 7 0 0012.38 0A3 3 0 0120 21a1 1 0 002 0 5 5 0 00-3.14-4.62A7 7 0 0019 15zm-8 5.9A5 5 0 017 15v-4a3 3 0 013-3h1zM10 6a2 2 0 014 0zm7 9a5 5 0 01-4 4.9V8h1a3 3 0 013 3z"
                      fill={
                        Array [
                          2,
                        ]
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
        </View>
      </View>
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 11,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Second Label Props 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 6,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "height": 48,
        "width": 48,
      }
    }
    testID="avatar"
  >
    <View
      style={
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        }
      }
      testID="avatar_container"
    >
      <View
        onLayout={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f9f9f9",
                "borderRadius": 24,
                "height": 48,
                "justifyContent": "center",
                "width": 48,
              }
            }
            testID="Image__placeholder"
          />
        </View>
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 24,
                "height": 48,
                "width": 48,
              },
            ]
          }
        >
          <FastImageView
            onFastImageError={[Function]}
            onFastImageLoadEnd={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
              }
            }
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="avatar.image"
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 16,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View />
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 11,
          },
          Object {},
          Object {
            "color": "#FF9800",
            "textDecorationLine": "underline",
          },
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;
